--- a/render.yaml
+++ b/render.yaml
@@ -10,11 +10,6 @@ services:
         generateValue: true
       - key: DATABASE_URL
         fromDatabase:
-          name: db
-          property: connectionString
+        value: ""
       - key: WEB_CONCURRENCY
-        value: 2
-databases: # this section provides some additional database configuration
-  - name: db
-    plan: free
-    ipAllowList: []
+        value: "2"
